--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+@import "~@ng-select/ng-select/themes/material.theme.css";
+
+/* html, body { height: 100%; } */
+body { 
+    margin: 100px 20px 20px 20px; 
+    background-color: #303030;
+    color: whitesmoke;
+}
+
+.ng-select.select .ng-select-container {
+    height: 42px;
+    border-bottom: 1px solid rgb(197, 127, 255);
+}
+
+.ng-select.select .ng-select-container .ng-value-container {
+    color: white;
+}
+
+.ng-select.select .ng-select-container .ng-value-container .ng-placeholder {
+    color: white;
+    font-size: 16px;
+}
+
+.ng-select .ng-arrow-wrapper .ng-arrow {
+    color: rgb(197, 127, 255);
+}
+
+.ng-select.select .ng-select-container .ng-value-container .ng-input input {
+    color: white;
+    
+}
+  
